--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,21 @@
+html {
+    margin: 0;
+    padding: 0;
+}
+
 body {
     background: black;
+    display: flex;
+    flex-direction: column;
+}
+
+header {
+    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
 }
 
 .flipped {
@@ -10,22 +26,29 @@ body {
     position: relative;
     width: 1024px;
     height: 576px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 3rem;
+    display: block;
 }
 
 #canvas {
     position: absolute;
+    margin: 0;
+    padding: 0;
 }
 
 .overlay.active {
     position: absolute;
     width: 100%;
-    height: 576px;
+    height: 100%;
     background-color: rgba(109, 71, 71, 0.865);
     z-index: 100;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    /* margin-top: 1rem; */
 }
 
 .backgrounds {
@@ -34,4 +57,6 @@ body {
 
 #works-cited {
     color: whitesmoke;
+    margin-left: 20%;
+    margin-top: 3rem;
 }
