complete game sound design/needs to be styled

--- a/styles/style.css
+++ b/styles/style.css
@@ -3,10 +3,20 @@
     padding: 0;
 }
 
+@font-face {
+    font-family: Souls_Bold;
+    src: url("fonts/SoulsBold.ttf");
+}
+
+@font-face {
+    font-family: Souls;
+    src: url("fonts/Souls.ttf");
+}
+
 html {
     margin: 0;
     padding: 0;
-    font-family: monospace;
+    font-family: 'Courier New', Courier, monospace;
 }
 
 
@@ -26,6 +36,17 @@ header {
     height: 12rem;
 
 }
+
+.header-link {
+    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    font-weight: 100;
+}
+
 
 h1 {
     font-size: 5em;
@@ -134,7 +155,7 @@ h2 {
     position: absolute;
     width: 100%;
     height: 100%;
-    background-color: rgba(109, 71, 71, 0.865);
+    background-color: rgb(109, 71, 71);
     z-index: 100;
     display: flex;
     flex-direction: column;
@@ -163,9 +184,29 @@ h2 {
 
 #works-cited {
     color: whitesmoke;
-    margin-left: 20%;
     margin-top: 3rem;
+    margin-left: auto;
+    margin-right: auto;
 }
+
+.works-cited-section {
+
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    margin-top: 1.5rem;
+    margin-left: 2rem;
+    margin: 1.5rem 0 1.5rem 2rem;
+}
+
+.works-cited-section a {
+    color: rgb(73, 73, 217);
+}
+
+.works-cited-section a:visited {
+    color: rgb(211, 75, 211);
+}
+
 
 #works-cited ul {
     color: white;
