upload updated stylesheet

--- a/styles/style.css
+++ b/styles/style.css
@@ -71,6 +71,10 @@ h2 {
     letter-spacing: 1em;
 }
 
+footer {
+    
+}
+
 .instructions-container {
     background-color: rgb(21, 21, 21);
     color: whitesmoke;
